# AIM_HUST_TEST

./: LICENSE.md  README.md  armorDetector.cpp
armor/inc/: RM_BUFF.h  lightBar.h
armor/src/: RM_BUFF.cpp  lightBar.cpp  score.cpp
config/: armorDetector.json
driver/camera/src/: GxCamera.cpp
solvePNP/: CMakeLists.txt
solvePNP/inc/: solvePNP.h  transform.h
solvePNP/src/: solvePNP.cpp  transform.cpp
thread/inc/: lightBarThread.h  preProcessThread.h
thread/src/: cameraThread.cpp  lightBarThread.cpp  preProcessThread.cpp
tool/: CMakeLists.txt
tool/inc/: tool_config.h  tool_cvex.h
tool/src/: tool_config.cpp  tool_cvex.cpp
